--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "~7.0.0",
         "colinmollenhour/credis": "1.5",
-        "lizards-and-pumpkins/catalog": "^3.0.0"
+        "lizards-and-pumpkins/catalog": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
